--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		%sveltekit.head%
 		
 	</head>
-	<body>
+	<body class="bg-zinc-900">
 		<div style="display: contents">
 			%sveltekit.body%
 		</div>
